index.css
@font-face {
  font-family: "SpaceGrotesk";
  src: url("SpaceGrotesk[wght].woff2") format("woff2");
}

:root {
	--popup-display: none;
	--green-full: rgba(207, 236, 86, 1);
	--green-low: rgba(207, 236, 86, 0.3);
	--green-ultra-low: rgba(207, 236, 86, 0.1)
}

.no-btn-style, .no-btn-style:focus {
	outline: none;
	background: transparent;
	border: 1px solid transparent;
}

.no-btn-style:active {
	outline: none;
	background: transparent;
	border: 1px solid grey;
}

/* POPUP */

.close-popup {
	font-weight: bold;
	font-size: 40px;
	text-align: right;
	color: var(--green-full);
	cursor: pointer;
	padding: 10px;
}

.close-popup:hover {
	color: var(--green-low);
}

.post-popup-box {
	display: var(--popup-display);
	z-index: 1;
	position: fixed;
	overflow: auto;
	background-color: black;
	/*  background: rgb(112,255,202);
background: linear-gradient(171deg, rgba(112,255,202,0.14183671689937138) 7%, rgba(0,0,0,0.8881924020305667) 100%);*/
	top: 0;
  bottom: 0;
  left: 0;
  right: 0;
	overflow-y: scroll !important;
}

.post-popup-inner {
	display: var(--popup-display);
	background-color: black;
	margin: 20px auto 20px auto;
	padding: 25px;
	width: 60%;
	border: 1px solid var(--green-full);
	color: white;
	/* box-shadow: 12px 12px 24px #353535, -12px -12px 24px #474747;*/
	/* box-shadow:  11px 11px 22px #b2aea9,
	 -11px -11px 22px #f0ece5;*/
	overflow: hidden;
}


.post-title {
	color: white;
	margin-top: -30px;
	/* clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 25%, 90% 0); */
}

.post-prev {
	font-size: 14px;
	color: grey;
}


/* a section title */
.section-title {
	color: var(--green-full);
	margin-top: 0;
	margin-left: 0px;
	padding: 10px;
  box-shadow: inset 0 -0.7em 0 0 var(--green-low);
	width: 250px;
}

/* a svg as the section title */
.section-title-svg {
	width: 150px;
}

/* a subtitle for the section */
.section-subtitle {
	display: block;
	border: 1px solid var(--green-full);
	color: var(--green-full);
	padding: 15px;
}

/* a name for the subtitle field (small text in border) */
.section-subtitle-name {
	position: relative;
	display: inline-block;
	top: 45px;
  background: var(--green-full);
	color: black;
	padding: 10px;
	margin-left: 20px;
	font-size: 15px;
	font-weight: bold;
}

@keyframes slideInFromTop {
  0% {
    transform: translateY(-1em);
  }
  100% {
    transform: translateY(0);
  }
}

.post-title {
	/*margin-left: auto;
	margin-right: auto;*/
}

.post-line {
	width: 80%;
	height: 1px;
	color: grey;
	background-color: grey;
	border-radius: 15px;
}

[class*="card-"] {
	border: 1px solid var(--green-full);
	color: white;
  display: inline-grid;
	/* min-width: 400px;*/
	max-width: 500px;
	margin: 10px;
	line-break: auto;
	max-inline-size: auto;
	font-size: 16px;
	/* animation: 1s ease-in-out 0s 1 slideInFromTop; */
}

.inner-social-card {
	border-left: 2px solid var(--green-full);
	padding: 20px;
	margin-left: 10px;
}


/* SOCIAL CARDS */
.card-social {
	/* base properties */
	padding-left: 20px;
}

/* POST CARDS */
.card-post {
	/* base properties */
}

/* bottom card container */
.bc-container {
	background: var(--green-low);
	padding: 10px;
	border-top: 2px solid var(--green-full);
}

/* top card container */
.tc-container {
	margin-left: 20px;
	padding-right: 20px;
	padding-left: 20px;
	border-left: 2px solid var(--green-full);
}

.c-title {
	color: black;
	font-weight: bold;
	writing-mode:tb-rl;
  transform: rotate(180deg);
  white-space:nowrap;
  display:block;
	margin-left: -30px;
	margin-top: 10px;
	background-color: var(--green-full);
	padding: 10px 0 10px 0;
  bottom:0;
	width: 20px;
}


/* logo as a pic */
.c-logo {
	height: 50px;
	/* There is always a little margins in these */
	margin-bottom: 10px;
	border-radius: 50%;
	filter: invert(100%);
}

.logo {
	padding: 15px;
	letter-spacing: 2px;
	grid-column-start: 1;
	grid-column-end: 3;
	grid-row-start: 1;
	grid-row-end: 1;
	margin-bottom: 10px;
	background: var(--green-ultra-low);
}

.vertical-left {
	transform: rotate(90deg);
	transform-origin: left top 0;
	margin-left: 3em;
}

.btn {
	display: inline-block;
	border: 0px solid white;
	background: var(--green-full);
	color: black;
	height: 50px;
	padding: 10px;
	min-width: 100px;
	max-width: 200px;
	word-break: break-all;
	font-family: SpaceGrotesk;
	font-size: 12px;
	font-weight: bold;
	cursor: pointer;
	clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0, 100% 0);
	transition: clip-path .3s;
}

.btn:hover {
	clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 25%, 90% 0);
}


@media only screen and (max-width: 800px) {
	.container {
		margin: 0;
		padding: 0;
		width: 90%;
		margin-left: auto;
		margin-right: auto;
		margin-top: 25px;
	}
	.post-popup-inner {
		width: 85%;
	}
}

@media only screen and (min-width: 800px) {
	.container {
		border: 1px solid var(--green-full);
		margin-top: 20px;
		margin-left: auto;
		margin-right: auto;
		padding: 20px;
		max-width: 1500px;
		width: 75%;
	}
}


@keyframes sweep {
  0%    {
	/* filter: blur(5px); */
	filter: opacity(10%);
  }
  100%  {
	/* filter: blur(0); */
	filter: opacity(100%);
  }
}

@keyframes blur {
  0%    {
	filter: blur(5px);
  }
  100%  {
	filter: blur(0);
  }
}

/* let us just ignore this */
.no-underline {
	border-bottom: 0px solid;
}

.no-underline:hover::after {
	border-bottom: 0px solid;
	width: 0;
}

.no-underline::after {
	width: 0;
	border-bottom: 0px solid;
}

/* ---------- */
/* OVERWRITES */
/* ---------- */

a:hover {
  width: 100%;
	background: var(--green-low);
}

a {
	color: white;
}

summary {
	cursor: pointer;
}

footer {
	color: var(--green-full);
	margin-top: 50px;
	margin-left: auto;
	margin-right: auto;
	text-align: left;
	width: 50%;
}

h1 {
  font-size: 4.2rem;
}

body {
  font-family: "SpaceGrotesk";
  font-size: 18px;
  background-color: black;
}  

details[open] summary ~ * {
  animation: sweep .5s ease-in-out;
}

details > summary {
  list-style: none;
}
details > summary::-webkit-details-marker {
  display: none;
}

pre {
	overflow-wrap: break-word;
}

code {
  border: 1px solid var(--green-low);
  border-radius: 10px;
  display: block;
  padding: 5px;
}

/* ---------- */
/* ATTRIBUTES */
/* ---------- */

.grid {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
}

.blur {
	animation: blur 2s ease-in-out;
}

.fixed {
	position: fixed;
}

